framing index view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,5 @@
-<h1>This is the index.</h1>
+<h1>Weclome to Wish List!</h1>
+<br>
+<h4>Already have an account?</h4> <h2>Log In!</h2>
+
+<h4>New user?</h4><h2>Sign Up</h2>
