linked back to sign up

--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -4,3 +4,5 @@
   <p>Password: <input type="text" name="password"></p>
   <input class="btn" type="submit">
 </form>
+<br>
+<h5>Need an account?</h5><h5><a href="/">Sign Up!</a></h5>
