--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,6 +6,6 @@
 <form method="POST" action="/signup">
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="text" name="password"></p>
+  <p>Password: <input type="password" name="password"></p>
   <input class="btn" type="submit">
 </form>
