--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,7 +1,7 @@
 <h4>Log in!</h4>
 <form method="POST" action="/login">
   <p>Name: <input type="text" name="username"></p>
-  <p>Password: <input type="text" name="password"></p>
+  <p>Password: <input type="password" name="password"></p>
   <input class="btn" type="submit">
 </form>
 <br>
