working on route slug

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
 
 <h4>New user?</h4><h2>Sign Up!</h2>
 <form method="POST" action="/signup">
-  <p>Name: <input type="text" name="username"></p>
+  <p>Name: <input type="text" name="name"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="password" name="password"></p>
   <input class="btn" type="submit">
