--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,6 +1,6 @@
 <h4>Log in!</h4>
 <form method="POST" action="/login">
-  <p>Name: <input type="text" name="username"></p>
+  <p>Name: <input type="text" name="name"></p>
   <p>Password: <input type="password" name="password"></p>
   <input class="btn" type="submit">
 </form>
