working on show view

--- a/app/views/user/show_list.erb
+++ b/app/views/user/show_list.erb
@@ -1,1 +1,9 @@
-<h1>Show List</h1>
+
+<p> Welcome, <%= current_user.username %>
+<h2> Tweets </h2>
+
+<% @items.each do |item| %>
+  <div>
+    <%= item.name %>
+  </div>
+<% end %>
