--- a/app/views/item/create_item.erb
+++ b/app/views/item/create_item.erb
@@ -1,6 +1,6 @@
 
 <h2>Add Item</h2>
-<form action="/add" method="POST">
+<form action="/:slug/list/add" method="POST">
   <p>Name: <input type="text" name="name"></p>
   <p>Link: <input type="text" name="link"></p>
   <p>Price: <input type="integer" name="price"></p>
