routing add item

--- a/app/views/user/show_list.erb
+++ b/app/views/user/show_list.erb
@@ -9,5 +9,5 @@
     </div>
   <% end %>
 <% else %>
-  <p>Your list is empty! Click <a href="/<%=@user.name%>/list/add">here</a> to add an item.</p>
+  <p>Your list is empty! Click <a href="/<%=@user.slug%>/list/add">here</a> to add an item.</p>
 <% end %>
