working on adding new items

--- a/app/views/item/create_item.erb
+++ b/app/views/item/create_item.erb
@@ -4,6 +4,14 @@
   <p>Name: <input type="text" name="name"></p>
   <p>Link: <input type="text" name="link"></p>
   <p>Price: <input type="integer" name="price"></p>
-  <p>Category: <input type="string" name="category"></p>
+  <label> Categories </label>
+    <%Category.all.each do |category|%>
+    <input type="checkbox" name="item[category_id]" id="<%= category.name %>" value="<%=category.id%>"><%=category.name%></input>
+  <%end%>
+
+  <br></br>
+    <label>New Category:</label>
+      <input  type="text" name="category[name]" id="category_name"></input>
+    <br></br>
   <input class="btn btn-primary" type="submit" value="submit">
 </form>
