--- a/app/views/user/show_list.erb
+++ b/app/views/user/show_list.erb
@@ -6,6 +6,8 @@
   <% @items.each do |item| %>
     <div>
       <%= item.name %>
+      <%= item.link %>
+      <%= item.price %>
     </div>
   <% end %>
   <br>
