route to edit working

--- a/app/views/item/show_item.erb
+++ b/app/views/item/show_item.erb
@@ -8,4 +8,4 @@
   <input type="submit" value="Delete Item">
 </form>
 
-<a href="/*/list/<%=@item.slug%>/delete">Edit Item </a>
+<a href="/<%=current_user.slug%>/list/<%=@item.slug%>/edit">Edit Item </a>
