able to edit item

--- a/app/views/item/show_item.erb
+++ b/app/views/item/show_item.erb
@@ -9,3 +9,5 @@
 </form>
 
 <a href="/<%=current_user.slug%>/list/<%=@item.slug%>/edit">Edit Item </a>
+<br>
+<a href="/<%=current_user.slug%>/list">Back to list.</a>
