--- a/app/views/item/edit_item.erb
+++ b/app/views/item/edit_item.erb
@@ -1,1 +1,10 @@
-edit_item.erb
+
+<h2> Edit Item </h2>
+
+<form method="post" action="/<%=current_user.slug%>/list/<%=@item.slug%>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <input type="text" name="name" value="<%= @item.name %>">
+  <input type="text" name="link" value="<%= @item.link %>">
+  <input type="text" name="price" value="<%= @item.price %>">
+  <input type="submit" value="submit">
+</form>
