--- a/app/views/user/show_list.erb
+++ b/app/views/user/show_list.erb
@@ -16,3 +16,6 @@
 <% else %>
   <p>Your list is empty! Click <a href="/<%=@user.slug%>/list/add">here</a> to add an item.</p>
 <% end %>
+<br>
+<br>
+<a href="/logout">Log Out</a>
