clean up list view

--- a/app/views/item/create_item.erb
+++ b/app/views/item/create_item.erb
@@ -4,7 +4,7 @@
   <p>Name: <input type="text" name="name"></p>
   <p>Link: <input type="text" name="link"></p>
   <p>Price: <input type="integer" name="price"></p>
-  <label> Categories </label>
+  <!-- <label> Categories </label> -->
     <!-- <%Category.all.each do |category|%>
     <input type="checkbox" name="item[category_id]" id="<%= category.name %>" value="<%=category.id%>"><%=category.name%></input>
   <%end%>
