--- a/app/views/user/show_list.erb
+++ b/app/views/user/show_list.erb
@@ -5,9 +5,9 @@
 <% if @items.any? %>
   <% @items.each do |item| %>
     <div>
-      <a href="/<%=current_user.slug%>/list/<%=item.slug%>"><%= item.name %></a>
-      <%= item.link %>
-      <%= item.price %>
+      <a href="/<%=current_user.slug%>/list/<%=item.slug%>"><%= item.name %></a> |
+      Price: $<%= item.price %> |
+      <a href="<%= item.link %>">Buy Now!</a>
 
     </div>
   <% end %>
