fixed current_user list bug

--- a/app/views/item/create_item.erb
+++ b/app/views/item/create_item.erb
@@ -4,6 +4,8 @@
   <p>Name: <input type="text" name="name"></p>
   <p>Link: <input type="text" name="link"></p>
   <p>Price: <input type="integer" name="price"></p>
+  <!---Render the existing check boxes and text field. -->
+
   <!-- <label> Categories </label> -->
     <!-- <%Category.all.each do |category|%>
     <input type="checkbox" name="item[category_id]" id="<%= category.name %>" value="<%=category.id%>"><%=category.name%></input>
