added comments to views

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,14 @@
 <h1>Weclome to Wish List!</h1>
-<br>
-<h4>Already have an account?</h4> <h2><a href="/login">Log In!</a></h2>
 
-<h4>New user?</h4><h2>Sign Up!</h2>
-<form method="POST" action="/signup">
-  <p>Name: <input type="text" name="name"></p>
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="password" name="password"></p>
-  <input class="btn" type="submit">
-</form>
+  <br>
+<!-- Log in link. -->
+  <h4>Already have an account?</h4> <h2><a href="/login">Log In!</a></h2>
+
+<!-- Sign up form. -->
+  <h4>New user?</h4><h2>Sign Up!</h2>
+  <form method="POST" action="/signup">
+    <p>Name: <input type="text" name="name"></p>
+    <p>Email: <input type="text" name="email"></p>
+    <p>Password: <input type="password" name="password"></p>
+    <input class="btn" type="submit">
+  </form>
