--- a/app/views/item/show_item.erb
+++ b/app/views/item/show_item.erb
@@ -1,13 +1,19 @@
 <h1><%=@item.name%></h1>
 
+<!-- Item info. -->
   Link:<h3><%=@item.link%></h3>
   Price:<h3><%=@item.price%></h3>
 
-<form method="post" action="/*/list/<%=@item.slug%>/delete">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Item">
-</form>
+<!-- Delete item. -->
+  <form method="post" action="/*/list/<%=@item.slug%>/delete">
+    <input id="hidden" type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Item">
+  </form>
 
-<a href="/<%=current_user.slug%>/list/<%=@item.slug%>/edit">Edit Item </a>
-<br>
-<a href="/<%=current_user.slug%>/list">Back to list.</a>
+<!-- Edit item link. -->
+  <a href="/<%=current_user.slug%>/list/<%=@item.slug%>/edit">Edit Item </a>
+
+  <br>
+
+<!-- Back to list. -->
+  <a href="/<%=current_user.slug%>/list">Back to list.</a>
