--- a/app/views/item/show_item.erb
+++ b/app/views/item/show_item.erb
@@ -3,6 +3,7 @@
 <!-- Item info. -->
   Link:<h3><%=@item.link%></h3>
   Price:<h3><%=@item.price%></h3>
+  Category:<h3><%=@item.category.name%></h3>
 
 <!-- Delete item. -->
   <form method="post" action="/*/list/<%=@item.slug%>/delete">
