--- a/app/views/item/edit_item.erb
+++ b/app/views/item/edit_item.erb
@@ -1,14 +1,34 @@
 <h2>Edit Item</h2>
 
+<!-- Display flash messages. -->
+  <% if flash.has?(:message) %>
+    <%= flash[:message] %>
+  <% end %>
+  <br>
+  <br>
+
 <!-- Edit Form. -->
   <form method="post" action="/<%=current_user.slug%>/list/<%=@item.slug%>">
     <input id="hidden" type="hidden" name="_method" value="PATCH">
 
-    <input type="text" name="name" value="<%= @item.name %>">
+    <p>Name: <input type="text" name="name" value="<%= @item.name %>"></p>
 
-    <input type="text" name="link" value="<%= @item.link %>">
+    <p>Link: <input type="text" name="link" value="<%= @item.link %>"></p>
 
-    <input type="text" name="price" value="<%= @item.price %>">
+    <p>Price: <input type="text" name="price" value="<%= @item.price %>"></p>
+
+    <p>Category:
+      <input type="text" list="categories" name="category" value="<%=@item.category.name%>">
+      <datalist id="categories">
+        <% @item.user.categories.each do |category| %>
+          <option><%=category.name%></option>
+          <% end %>
+        </datalist>
+      </p>
 
     <input type="submit" value="submit">
   </form>
+
+  <br>
+
+  <a href="/<%=current_user.slug%>/list">Back to list.</a>
