changed name to username

--- a/app/views/item/create_item.erb
+++ b/app/views/item/create_item.erb
@@ -9,7 +9,7 @@
 
 <!-- Create Form. -->
   <form action="/:slug/list/add" method="POST">
-    <p>Name: <input type="text" name="name"></p>
+    <p>Username: <input type="text" name="name"></p>
 
     <p>Link: <input type="text" name="link"></p>
 
