removed external links

--- a/app/views/item/show_item.erb
+++ b/app/views/item/show_item.erb
@@ -1,8 +1,8 @@
 <h1><%=@item.name%></h1>
 
 <!-- Item info. -->
-  <h3><a href="<%= @item.link %>"><%=@item.link%></a></h3>
-  
+  <h3><%=@item.link%></h3>
+
   Price:<h3><%=@item.price%></h3>
   Category:<h3><%=@item.category.name%></h3>
 
